fix alignment with recommendation card controls

--- a/client/src/styles/components/_layout.scss
+++ b/client/src/styles/components/_layout.scss
@@ -445,7 +445,7 @@ section {
   position: absolute;
   bottom: 0.5rem;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(calc(-50% - 2px));
   width: 20px;
   height: 20px;
   color: #999;
